Adjusted footer template to correct spacing issues when viewed on higher resolution displays

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,11 @@ body {
     flex-direction: column;
 }
 
+section {
+    height: 100%;
+}
+
 footer {
-    margin-top: auto;
+    margin-top: 20px;
     padding: 1em;
 }
